# vehicle-monitoring-network

./: .makefile.bak  README.md  tasks.json
arduino/: icann_to_obd2.ino
docs/: cassandra.md  quadtree.md
lib/: CMakeLists.txt  main.cpp
lib/data/: CMakeLists.txt  README.md  cassandra.hpp  diagnostic.hpp  fleet.hpp  obd2_dictionary.hpp  point_with_uuid.hpp  quadtree.hpp  user.hpp  vehicle.hpp
lib/server/: CMakeLists.txt  README.md  json_server.hpp  server.hpp
lib/util/: geometry.hpp  security.hpp
